<resources>
    <string name="app_name">Github Client</string>
    <string name="repo_name">Name</string>
    <string name="repo_description">Description</string>
    <string name="repo_language">Language</string>
    <string name="test_text">test text</string>
    <string name="text_lang">test lang</string>
    <string name="title_activity_repo_form">RepoForm</string>
    <string name="save">Save</string>
    <!-- Strings para pantalla de login -->
    <string name="cancel">Cancel</string>
    <string name="user">Usuario</string>
    <string name="password">Password</string>
    <string name="login">Login</string>


</resources>