<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".RepoItem">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        >
        <ImageView
            android:id="@+id/repo_owner_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_foreground"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_name"
                    android:padding="8dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/repo_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/test_text"
                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView

                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_description"
                    android:padding="8dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/repo_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    android:text="@string/test_text" />

            </LinearLayout>            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView

                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:text="@string/repo_language"
                    android:padding="8dp"
                    android:textStyle="bold"
                    />

            <TextView
                android:id="@+id/repo_lang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:text="@string/text_lang" />

            </LinearLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/edit_repo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_edit_24"/>
            <ImageView
                android:id="@+id/delete_repo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_delete_24"/>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>